--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,19 +1,18 @@
 name: narsil-cms
 type: laravel
 docroot: public
-php_version: "8.2"
+php_version: '8.3'
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.11"
+  type: mysql
+  version: '8.0'
 use_dns_when_possible: true
-composer_version: "2"
+composer_version: '2'
 web_environment: []
 corepack_enable: false
-
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
