--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.8.2",
     "concurrently": "^9.0.1",
     "laravel-vite-plugin": "^1.2.0",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
+    "sass-embedded": "^1.89.2",
     "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vite": "^6.2.4"
   },
@@ -48,6 +50,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/postcss": "^4.1.10",
     "@vitejs/plugin-react": "^4.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,8 +62,8 @@
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
     "react-responsive": "^10.0.1",
+    "sass": "^1.89.2",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.4"
+    "tailwind-merge": "^3.3.1"
   }
 }
