--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@types/lodash": "^4.17.18",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
@@ -30,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.518.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
@@ -41,6 +43,7 @@
     "sass": "^1.89.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
-    "ziggy-js": "^2.5.3"
+    "ziggy-js": "^2.5.3",
+    "zustand": "^5.0.5"
   }
 }
