--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@inertiajs/react": "^2.0.12",
     "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
