--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "dev": "vite"
+    "dev": "CHOKIDAR_USEPOLLING=true vite"
   },
   "dependencies": {
-    "@inertiajs/react": "^2.0.13",
+    "@inertiajs/react": "^2.0.14",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.6.0",
@@ -28,7 +28,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "ziggy-js": "^2.5.3",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -40,7 +40,7 @@
     "concurrently": "^9.2.0",
     "laravel-vite-plugin": "^1.3.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.1",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "sass-embedded": "^1.89.2",
     "tailwindcss": "^4.1.11",
