--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@inertiajs/react": "^2.0.17",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@inertiajs/react": "^2.1.1",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/extension-subscript": "^3.0.9",
-    "@tiptap/extension-superscript": "^3.0.9",
-    "@tiptap/extension-text-align": "^3.0.9",
-    "@tiptap/extensions": "^3.0.9",
-    "@tiptap/pm": "^3.0.9",
-    "@tiptap/react": "^3.0.9",
-    "@tiptap/starter-kit": "^3.0.9",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@tiptap/extension-subscript": "^3.2.0",
+    "@tiptap/extension-superscript": "^3.2.0",
+    "@tiptap/extension-text-align": "^3.2.0",
+    "@tiptap/extensions": "^3.2.0",
+    "@tiptap/pm": "^3.2.0",
+    "@tiptap/react": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "graphiql": "^5.2.0",
+    "graphql": "^16.11.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
@@ -44,9 +46,9 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.1.9",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
@@ -56,13 +58,9 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sass-embedded": "^1.90.0",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.9.2",
-    "vite": "^7.1.1"
-  },
-  "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "vite": "^7.1.2"
   }
 }
