--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "version": "1.0.0",
   "scripts": {
     "build": "vite build",
-    "dev": "CHOKIDAR_USEPOLLING=true vite"
+    "dev": "vite"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@floating-ui/dom": "^1.0.0",
     "@inertiajs/react": "^2.1.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/core": "^3.2.0",
     "@tiptap/extension-subscript": "^3.2.0",
     "@tiptap/extension-superscript": "^3.2.0",
     "@tiptap/extension-text-align": "^3.2.0",
@@ -34,11 +36,11 @@
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-resizable-panels": "^3.0.4",
     "react-responsive": "^10.0.1",
+    "react": "^19.1.1",
     "sass": "^1.90.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -46,7 +48,10 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@inertiajs/react": "^2.1.1",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-table": "^8.21.3",
+    "@tiptap/react": "^3.2.0",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -54,13 +59,17 @@
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
     "laravel-vite-plugin": "^2.0.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "sass-embedded": "^1.90.0",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.9.2",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "zustand": "^5.0.7"
   }
 }
