--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
     "inertiajs/inertia-laravel": "^2.0",
     "laravel/fortify": "^1.27",
     "laravel/framework": "^12.0",
+    "laravel/sanctum": "^4.2",
     "laravel/tinker": "^2.0",
+    "nuwave/lighthouse": "^6.62",
     "tightenco/ziggy": "^2.0"
   },
-  "require-dev": {},
   "autoload": {
     "psr-4": {
       "Narsil\\": "src/",
