--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@inertiajs/react": "^2.1.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@tiptap/core": "^3.2.0",
     "@tiptap/extension-subscript": "^3.2.0",
     "@tiptap/extension-superscript": "^3.2.0",
@@ -36,11 +37,11 @@
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
+    "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-resizable-panels": "^3.0.4",
     "react-responsive": "^10.0.1",
-    "react": "^19.1.1",
     "sass": "^1.90.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
