--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "private": true,
-  "type": "module",
   "name": "@narsil/cms",
   "version": "1.0.0",
+  "type": "module",
+  "private": true,
   "scripts": {
     "build": "vite build",
     "dev": "vite"
@@ -14,18 +14,18 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
-    "@inertiajs/react": "^2.1.4",
+    "@inertiajs/react": "^2.1.5",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
-    "@tiptap/core": "^3.4.1",
-    "@tiptap/extension-subscript": "^3.4.1",
-    "@tiptap/extension-superscript": "^3.4.1",
-    "@tiptap/extension-text-align": "^3.4.1",
-    "@tiptap/extensions": "^3.4.1",
-    "@tiptap/pm": "^3.4.1",
-    "@tiptap/react": "^3.4.1",
-    "@tiptap/starter-kit": "^3.4.1",
+    "@tiptap/core": "^3.4.2",
+    "@tiptap/extension-subscript": "^3.4.2",
+    "@tiptap/extension-superscript": "^3.4.2",
+    "@tiptap/extension-text-align": "^3.4.2",
+    "@tiptap/extensions": "^3.4.2",
+    "@tiptap/pm": "^3.4.2",
+    "@tiptap/react": "^3.4.2",
+    "@tiptap/starter-kit": "^3.4.2",
     "@vitejs/plugin-react": "^5.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,7 +34,7 @@
     "graphiql": "^5.2.0",
     "graphql": "^16.11.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.543.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
@@ -42,23 +42,27 @@
     "react-dom": "^19.1.1",
     "react-resizable-panels": "^3.0.5",
     "react-responsive": "^10.0.1",
-    "sass": "^1.92.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "ziggy-js": "^2.5.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@inertiajs/react": "^2.1.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@inertiajs/react": "^2.1.5",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/react": "^3.4.1",
+    "@tiptap/react": "^3.4.2",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.1.12",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "concurrently": "^9.2.1",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
     "laravel-vite-plugin": "^2.0.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
@@ -66,11 +70,9 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sass-embedded": "^1.92.0",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
-    "vite": "^7.1.4",
+    "vite": "^7.1.5",
     "zustand": "^5.0.8"
   }
 }
