--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
-    "@inertiajs/react": "^2.1.6",
+    "@inertiajs/react": "^2.1.7",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
-    "@tiptap/core": "^3.4.3",
-    "@tiptap/extension-subscript": "^3.4.3",
-    "@tiptap/extension-superscript": "^3.4.3",
-    "@tiptap/extension-text-align": "^3.4.3",
-    "@tiptap/extensions": "^3.4.3",
-    "@tiptap/pm": "^3.4.3",
-    "@tiptap/react": "^3.4.3",
-    "@tiptap/starter-kit": "^3.4.3",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@tiptap/core": "^3.4.4",
+    "@tiptap/extension-subscript": "^3.4.4",
+    "@tiptap/extension-superscript": "^3.4.4",
+    "@tiptap/extension-text-align": "^3.4.4",
+    "@tiptap/extensions": "^3.4.4",
+    "@tiptap/pm": "^3.4.4",
+    "@tiptap/react": "^3.4.4",
+    "@tiptap/starter-kit": "^3.4.4",
+    "@vitejs/plugin-react": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "graphiql": "^5.2.0",
     "graphql": "^16.11.0",
+    "html-react-parser": "^5.2.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
@@ -49,10 +50,10 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@inertiajs/react": "^2.1.6",
+    "@inertiajs/react": "^2.1.7",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/react": "^3.4.3",
+    "@tiptap/react": "^3.4.4",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -65,7 +66,7 @@
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
-    "vite": "^7.1.5",
+    "vite": "^7.1.6",
     "zustand": "^5.0.8"
   }
 }
