--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
+    "@fontsource/roboto": "latest",
     "@inertiajs/react": "^2.2.8",
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-table": "^8.21.3",
@@ -35,7 +36,7 @@
     "graphql": "^16.11.0",
     "html-react-parser": "^5.2.6",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.545.0",
+    "lucide-react": "latest",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
