--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "inertiajs/inertia-laravel": "^2.0",
     "laravel/fortify": "^1.27",
     "laravel/framework": "^12.0",
+    "laravel/horizon": "^5.39",
     "laravel/sanctum": "^4.2",
     "laravel/tinker": "^2.0",
     "nuwave/lighthouse": "^6.62",
