--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
     "@fontsource/inter": "latest",
-    "@inertiajs/react": "^2.2.16",
+    "@inertiajs/react": "^2.2.18",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.12",
-    "@tiptap/core": "^3.10.7",
-    "@tiptap/extension-subscript": "^3.10.7",
-    "@tiptap/extension-superscript": "^3.10.7",
-    "@tiptap/extension-text-align": "^3.10.7",
-    "@tiptap/extensions": "^3.10.7",
-    "@tiptap/pm": "^3.10.7",
-    "@tiptap/react": "^3.10.7",
-    "@tiptap/starter-kit": "^3.10.7",
+    "@tiptap/core": "^3.11.0",
+    "@tiptap/extension-subscript": "^3.11.0",
+    "@tiptap/extension-superscript": "^3.11.0",
+    "@tiptap/extension-text-align": "^3.11.0",
+    "@tiptap/extensions": "^3.11.0",
+    "@tiptap/pm": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
     "@vitejs/plugin-react": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,9 +34,9 @@
     "date-fns": "^4.1.0",
     "graphiql": "^5.2.1",
     "graphql": "^16.12.0",
-    "html-react-parser": "^5.2.8",
+    "html-react-parser": "^5.2.10",
     "lodash": "^4.17.21",
-    "lucide-react": "latest",
+    "lucide-react": "0.554",
     "motion": "^12.23.24",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
@@ -51,12 +51,12 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@inertiajs/react": "^2.2.16",
+    "@inertiajs/react": "^2.2.18",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/react": "^3.10.7",
+    "@tiptap/react": "^3.11.0",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.2.4",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
     "laravel-vite-plugin": "^2.0.1",
@@ -66,7 +66,7 @@
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2",
+    "vite": "^7.2.4",
     "zustand": "^5.0.8"
   }
 }
