--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "graphiql": "^5.2.2",
     "graphql": "^16.12.0",
     "html-react-parser": "^5.2.11",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.22",
     "lucide-react": "0.562",
     "motion": "^12.23.26",
     "radix-ui": "^1.4.3",
@@ -55,18 +55,15 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/react": "^3.14.0",
-    "@types/lodash": "^4.17.21",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "laravel-vite-plugin": "^2.0.1",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "vite": "^7.3.0",
-    "zustand": "^5.0.9"
+    "vite": "^7.3.0"
   }
 }
