--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "laravel/horizon": "^5.39",
     "laravel/sanctum": "^4.2",
     "laravel/tinker": "^2.0",
-    "narsil/ui": "dev-main",
+    "narsil/base": "dev-main",
     "nuwave/lighthouse": "^6.62",
     "tightenco/ziggy": "^2.0"
   },
